metadata/force-app/main/default/objects/Product2/fields/Conga_Additional_User_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Conga_Additional_User_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-2162 Fix other items in the Order Form - Created this field to only query certain products (Checkbox -True) and display it in the Additional user pricing section in the Order form.</description>
    <label>Conga Additional User Pricing</label>
    <type>Checkbox</type>
</CustomField>