metadata/force-app/main/default/objects/Product2/fields/Conga_Family__c.field-meta.xml
<CustomField>
    <fullName>Conga_Family__c</fullName>
    <label>Conga Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type of User</fullName>
            </value>
            <value>
                <fullName>Storage, Traffic, and Backup</fullName>
            </value>
            <value>
                <fullName>Modules and Add-Ons</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>One-Off Items</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>