metadata/force-app/main/default/objects/Product2/fields/Conga_Product_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Conga_Product_Sort_Order__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <label>Conga Product Sort Order</label>
    <length>15</length>
    <type>Text</type>
</CustomField>