metadata/force-app/main/default/objects/Product2/fields/Conga_Product_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Conga_Product_Unit_of_Measure__c</fullName>
    <description>BODEV-2162 Fix other items in the Order Form - Created this field to set values for products like Admin, Regular, Light etc to query and display it in the Additional user pricing section in the Order form.</description>
    <label>Conga Product Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per User</fullName>
            </value>
            <value>
                <fullName>Per Batch</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>