metadata/force-app/main/default/objects/Product2/fields/Conga_User_Pricing_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Conga_User_Pricing_Sort_Order__c</fullName>
    <description>BODEV-2162 Fix other items in the Order Form - Created this field to only query certain products (Checkbox -True) and display it in the Additional user pricing section in the Order form.</description>
    <label>Conga User Pricing Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>