metadata/force-app/main/default/objects/Product2/fields/Dependent_Product__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-363: Indicates product that depends on this product. Used for automatically adding dependent products.</description>
    <label>Dependent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Depends on products</relationshipLabel>
    <relationshipName>Dependent_Products</relationshipName>
    <type>Lookup</type>
</CustomField>