metadata/force-app/main/default/objects/Product2/fields/Exclude_from_New_Business__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_New_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the product should be allowed for New Business Opportunities or not.</description>
    <label>Exclude from New Business</label>
    <type>Checkbox</type>
</CustomField>