metadata/force-app/main/default/objects/Product2/fields/Exclude_from_Upsells__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Upsells__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the product should be allowed for Upsell opportunities(Only upsells and not on downsell) or not.</description>
    <label>Exclude from Upsells</label>
    <type>Checkbox</type>
</CustomField>