metadata/force-app/main/default/objects/Product2/fields/For_Contract_Renewals__c.field-meta.xml
<CustomField>
    <fullName>For_Contract_Renewals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Contract Renewals</label>
    <type>Checkbox</type>
</CustomField>