metadata/force-app/main/default/objects/Product2/fields/Has_Unlimited_Limit__c.field-meta.xml
<CustomField>
    <fullName>Has_Unlimited_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Unlimited Limit</label>
    <type>Checkbox</type>
</CustomField>