metadata/force-app/main/default/objects/Product2/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Integration record related to this product.</description>
    <label>Integration</label>
    <referenceTo>Integration__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>