metadata/force-app/main/default/objects/Product2/fields/Integration_Platform__c.field-meta.xml
<CustomField>
    <fullName>Integration_Platform__c</fullName>
    <description>BODEV-2613 Add new field &quot;Integration Platform&quot; to product Taxonomy in SF</description>
    <label>Integration Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrations Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>