metadata/force-app/main/default/objects/Product2/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>Product Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>