metadata/force-app/main/default/objects/Product2/fields/Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Product</label>
    <type>Checkbox</type>
</CustomField>