metadata/force-app/main/default/objects/Product2/fields/mavenlink__ML_Project_Bearing__c.field-meta.xml
<CustomField>
    <fullName>mavenlink__ML_Project_Bearing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggers Mavenlink Project</label>
    <type>Checkbox</type>
</CustomField>