metadata/force-app/main/default/objects/Product2/fields/mavenlink__ML_Project_Master__c.field-meta.xml
<CustomField>
    <fullName>mavenlink__ML_Project_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creates Mavenlink Task</label>
    <type>Checkbox</type>
</CustomField>