metadata/force-app/main/default/objects/Product2/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <inlineHelpText>Field used in the product selector screen to make a distinction between legacy and new Brand Guidelines in the Bynder &apos;19 pricebook.</inlineHelpText>
    <label>Name2</label>
    <type>TextArea</type>
</CustomField>