metadata/force-app/main/default/objects/Product2/fields/Netsuite_Link__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Link__c</fullName>
    <formula>&quot;https://4196915.app.netsuite.com/app/common/item/item.nl?id=&quot;&amp;Netsuite_New_Business_Item_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Link</label>
    <type>Text</type>
</CustomField>