metadata/force-app/main/default/objects/Product2/fields/Netsuite_New_Business_Item_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_New_Business_Item_Internal_ID__c</fullName>
    <description>Netsuite Internal ID for matching item</description>
    <externalId>true</externalId>
    <inlineHelpText>Netsuite Internal ID for matching item</inlineHelpText>
    <label>Netsuite New Business Item Internal ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>