metadata/force-app/main/default/objects/Product2/fields/Netsuite_Renewal_Item_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Renewal_Item_Internal_ID__c</fullName>
    <description>Internal ID of the renewal item in Netsuite.</description>
    <inlineHelpText>Internal ID of the renewal item in Netsuite.</inlineHelpText>
    <label>Netsuite Renewal Item Internal ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>