metadata/force-app/main/default/objects/Product2/fields/of_Additional_limit_products__c.field-meta.xml
<CustomField>
    <fullName>of_Additional_limit_products__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to store the no of additional limit products associated to the parent custom solution in the product rules.</description>
    <inlineHelpText>Counts the number of dependant products added as optional in the product rules linked to the product.</inlineHelpText>
    <label># of Additional limit products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>