metadata/force-app/main/default/objects/Product2/fields/of_Allocated_STT_Minutes__c.field-meta.xml
<CustomField>
    <fullName>of_Allocated_STT_Minutes__c</fullName>
    <label># of Allocated STT Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>