metadata/force-app/main/default/objects/Product2/fields/of_Assets__c.field-meta.xml
<CustomField>
    <fullName>of_Assets__c</fullName>
    <label># of Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>