metadata/force-app/main/default/objects/Product2/fields/of_Content_Creations__c.field-meta.xml
<CustomField>
    <fullName>of_Content_Creations__c</fullName>
    <label># of Content Creations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>