metadata/force-app/main/default/objects/Product2/fields/of_Image_Processing__c.field-meta.xml
<CustomField>
    <fullName>of_Image_Processing__c</fullName>
    <label># of Image Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>