metadata/force-app/main/default/objects/Product2/fields/of_Light_Template_Users__c.field-meta.xml
<CustomField>
    <fullName>of_Light_Template_Users__c</fullName>
    <description>BODEV-2494 Add new user type in Salesforce</description>
    <label># of Light/Template Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>