metadata/force-app/main/default/objects/Product2/fields/of_Light_Users__c.field-meta.xml
<CustomField>
    <fullName>of_Light_Users__c</fullName>
    <label># of Light Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>