metadata/force-app/main/default/objects/Product2/fields/of_Raw_Data_Events__c.field-meta.xml
<CustomField>
    <fullName>of_Raw_Data_Events__c</fullName>
    <label># of Raw Data Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>