metadata/force-app/main/default/objects/Product2/fields/of_Storage__c.field-meta.xml
<CustomField>
    <fullName>of_Storage__c</fullName>
    <label># of Storage (GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>