metadata/force-app/main/default/objects/Product2/fields/Pricing_Availability__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Availability__c</fullName>
    <description>BODEV-4105 : Used to specify the pricing model to which the products are applicable.</description>
    <label>Pricing Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Standard &amp; Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>