metadata/force-app/main/default/objects/Product2/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Pricing</fullName>
            </value>
            <value>
                <fullName>Special Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>