metadata/force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin/Regular Users</fullName>
            </value>
            <value>
                <fullName>Administrator User</fullName>
            </value>
            <value>
                <fullName>Admin Users</fullName>
            </value>
            <value>
                <fullName>Adobe Creative Connector</fullName>
            </value>
            <value>
                <fullName>AI Enrichment</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Brand Connect</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines legacy</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Brand Store</fullName>
            </value>
            <value>
                <fullName>Bynder Express</fullName>
            </value>
            <value>
                <fullName>Bynder Studio</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>CMS Connector</fullName>
            </value>
            <value>
                <fullName>Communications Connector</fullName>
            </value>
            <value>
                <fullName>Connected Ecosystem</fullName>
            </value>
            <value>
                <fullName>Content Hub</fullName>
            </value>
            <value>
                <fullName>Content Operations</fullName>
            </value>
            <value>
                <fullName>Content Workflow</fullName>
            </value>
            <value>
                <fullName>Content Workflow Standalone</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contributor User</fullName>
            </value>
            <value>
                <fullName>Custom Users</fullName>
            </value>
            <value>
                <fullName>CX Omnichannel</fullName>
            </value>
            <value>
                <fullName>CX User Community</fullName>
            </value>
            <value>
                <fullName>DAM</fullName>
            </value>
            <value>
                <fullName>Design Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>