metadata/force-app/main/default/objects/Product2/fields/Product_Category_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_New__c</fullName>
    <description>BODEV-1965: 3rd layer of New Product Taxonomy</description>
    <label>[Deprecated] Product Category New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Category</valueSetName>
    </valueSet>
</CustomField>