metadata/force-app/main/default/objects/Product2/fields/Product_Definition__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition__c</fullName>
    <label>Product Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>