metadata/force-app/main/default/objects/Product2/fields/Product_Family_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_New__c</fullName>
    <description>BODEV-1965: 2nd layer of New Product Taxonomy</description>
    <label>[Deprecated] Product Family New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>