metadata/force-app/main/default/objects/Product2/fields/Product_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID (18 digits)</label>
    <type>Text</type>
</CustomField>