metadata/force-app/main/default/objects/Product2/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF(Legacy_Product__c= TRUE,
Name&amp;&quot; (Legacy)&quot;,
Name)</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>