metadata/force-app/main/default/objects/Product2/fields/Product_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_New__c</fullName>
    <description>BODEV-1965: 1st layer of New Product Taxonomy</description>
    <label>[Deprecated] Product Type New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>