metadata/force-app/main/default/objects/Product2/fields/Product_Type_on_Customer_Documents__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_on_Customer_Documents__c</fullName>
    <description>BODEV-2750 Renewal Agreement - Demo &amp; fixes 
Created this field for Customer Document Purpose</description>
    <label>Product Type on Customer Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-ons</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Core &amp; Modules</fullName>
            </value>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Included portal feature</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Success Package</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Users &amp; Storage</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>