metadata/force-app/main/default/objects/Product2/fields/Product_with_Limits__c.field-meta.xml
<CustomField>
    <fullName>Product_with_Limits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product with Limits</label>
    <type>Checkbox</type>
</CustomField>