metadata/force-app/main/default/objects/Product2/fields/Purchase_family__c.field-meta.xml
<CustomField>
    <fullName>Purchase_family__c</fullName>
    <description>Used in the Conga Template to make a distinction between the different types of Purchases.</description>
    <label>Purchase family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Upgrade</fullName>
            </value>
            <value>
                <fullName>Module(s)</fullName>
            </value>
            <value>
                <fullName>Professional Service(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Storage Upgrade</fullName>
            </value>
            <value>
                <fullName>Integration(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>