metadata/force-app/main/default/objects/Product2/fields/Show_product_for_User_Pricing_table_SD__c.field-meta.xml
<CustomField>
    <fullName>Show_product_for_User_Pricing_table_SD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created this field to identify products to be displayed on the Additional User Pricing Table</description>
    <label>SpotDraft User pricing table product?</label>
    <type>Checkbox</type>
</CustomField>