metadata/force-app/main/default/objects/Product2/fields/Standard_Definition__c.field-meta.xml
<CustomField>
    <fullName>Standard_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Definition</label>
    <referenceTo>Standard_Definitions__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>