metadata/force-app/main/default/objects/Product2/fields/Swap_Product__c.field-meta.xml
<CustomField>
    <fullName>Swap_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the product to be swapped with the legacy product.</description>
    <label>Swap Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Swap Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>