metadata/force-app/main/default/objects/Product2/fields/Unit_of_Measure_SD__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_SD__c</fullName>
    <description>Created this field to set values for products like Admin, Regular, Light etc to query and display it in the Additional user pricing section in the Order form - SpotDraft</description>
    <label>SpotDraft Additional User Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per User</fullName>
            </value>
            <value>
                <fullName>Per Batch</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>