metadata/force-app/main/default/objects/Product2/fields/User_Pricing_Sort_Order_SD__c.field-meta.xml
<CustomField>
    <fullName>User_Pricing_Sort_Order_SD__c</fullName>
    <description>Sort order field for items on Additional User pricing table - SpotDraft</description>
    <label>SpotDraft User Pricing Table Sortorder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>