metadata/force-app/main/default/objects/Product2/recordTypes/NSCRM_Item.recordType-meta.xml
<RecordType>
    <fullName>NSCRM_Item</fullName>
    <active>true</active>
    <description>ACTIAN NSCRM Item</description>
    <label>NSCRM Item</label>
</RecordType>