metadata/force-app/main/default/objects/Product2/recordTypes/Webdam.recordType-meta.xml
<RecordType>
    <fullName>Webdam</fullName>
    <active>true</active>
    <label>Webdam</label>
</RecordType>