metadata/force-app/main/default/objects/Product2/validationRules/Name_50_characters_or_fewer.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_50_characters_or_fewer</fullName>
    <active>true</active>
    <description>Name needs to be 50 characters or fewer.</description>
    <errorConditionFormula>LEN(Name) &gt; 50</errorConditionFormula>
    <errorMessage>Please ensure that the product name is 50 characters or fewer.</errorMessage>
</ValidationRule>